--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
-version: 2
+version: 2.1
 
 jobs:
   build:
     docker:
       - image: circleci/python:3.7.3-stretch
       
-    working_directory: ~/ML-microservice-api
+    working_directory: ~/cloud-devops-capstone
     
     steps:
       - checkout
@@ -16,20 +16,19 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            #which python3
             make setup
-            source ~/.ML-microservice-api/bin/activate
+            source ~/.cloud-devops-capstone/bin/activate
             make install
             
       - save_cache:
           paths:
-            - ./ML-microservice-api
+            - ./cloud-devops-capstone
           key: v1-dependencies-{{ checksum "requirements.txt" }}
             
       - run:
           name: run lint
           command: |
-            source ~/.ML-microservice-api/bin/activate
+            source ~/.cloud-devops-capstone/bin/activate
             make lint
 
 workflows:
