Added source command to get into venv into security scan job in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
       - run:
           name: security scan
           command: |
+            source ~/.cloud-devops-capstone/bin/activate
             safety check
 
 workflows:
