--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 jobs:
-  build:
+  CIphase:
     docker:
       - image: circleci/python:3.7.3-stretch
       
@@ -26,18 +26,73 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
             
       - run:
-          name: run lint
+          name: Run lint
           command: |
             source ~/.cloud-devops-capstone/bin/activate
             make lint
             
       - run:
-          name: security scan
+          name: Security scan
           command: |
             source ~/.cloud-devops-capstone/bin/activate
             safety check
+      
+      - run:
+          name: Build new Docker Image
+          command: |
+            docker login --username ${DOCKER_ID} --password ${DOCKER_PASS}
+            docker build --tag capstone-test .
+            docker image ls
+            
+      - run:
+          name: Upload new Docker Image
+          command: |
+            docker login --username ${DOCKER_ID} --password ${DOCKER_PASS}
+            docker image tag capstone-test ${DOCKER_ID}/capstone-test
+            docker push ${DOCKER_ID}/capstone-test
+            
 
+  CDphase:
+    docker:
+      - image: aws/aws-cli
+      
+    working_directory: ~/cloud-devops-capstone
+    
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+      
+      - run:
+          name: Install dependencies
+          command: |
+            # Probably need kubectl
+            # What else..? Look at CircleCI example probably
+      
+      - run:
+          name: Link to cluster
+          command: |
+            aws eks --region ${AWS_DEFAULT_REGION} update-kubeconfig --name my-capstone-cluster # Make sure the aws-cli is set up properly I guess?
+            kubectl get svc
+      
+      - run:
+          name: Deploy cluster (Conditionally?)
+          command: |
+            kubectl apply -f capstone-deployment.yml # May want to do this conditionally
+            kubectl get svc
+            kubectl get pods
+            
+      - run:
+          name: Perform rolling update
+          command: |
+            kubectl set image deployment/capstone-deployment capstone-deployment=tadhgdowney/capstone-test
+            kubectl get all
+  
 workflows:
   cicd-pipeline:
     jobs:
-      - build
+      - CIphase
+      - CDphase:
+          requires:
+            - CIphase
