--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
 
   CDphase:
     docker:
-      - image: aws/aws-cli
+      - image: amazon/aws-cli
       
     working_directory: ~/cloud-devops-capstone
     
