--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
       - run:
           name: Deploy cluster (Conditionally?)
           command: |
-            kubectl apply -f capstone-deployment.yml # May want to do this conditionally
+            kubectl apply -f capstone-deployment.yaml # May want to do this conditionally
             kubectl get svc
             kubectl get pods
             
